Version 0.2.0:
	New features:
	- New dialog: attribute_selector_t
	- New widgets: expander_t, color_picker_t, color_pair_picker_t,
	  widget_group_t

	Miscelaneous:
	- Changed the set_focus call in window_component_t to change the argument
	  from bool to an enum indicating where the focus came from as well.
	- Renamed focus_set to set_child_focus in container_t
	- Added widget_container_t which serves better as a base class for widgets
	  which group multiple widgets together.

	Bug fixes:
	- Update the visual state of a checkbox on calling set_state.

Version 0.1.14:
	Miscelaneous:
	- Changed the visibility of ensure_cursor_on_screen in edit_window_t from
	  private to protected.

Version 0.1.13:
	Bug fixes:
	- Prevent unprintable zero-width characters at the start of a line from
	  being printed separately.
	- Fix cursor positioning for zero-width characters at the start of a line.
	- Fix invalid memory access in X11 handling.

Version 0.1.12:
	New features:
	- Much improved mouse handling for text fields and autocomplete pop-ups.

	Bug fixes:
	- Detect broken X11 connections when using XCB, and disable the X11
	  clipboard handling if the connection breaks.
	- Fix several innocuous possible data races.

Version 0.1.11:
	New features:
	- Text lines and edit windows now have options for showing tabs.
	- Changed the text_buffer_t API w.r.t. handling of the selection and find
	  results.

	Bug fixes:
	- Tabs are now handled better when using line wrapping.
	- Stop propagating mouse events to dialogs that are no longer the active
	  dialog.

Version 0.1.10:
	Bug fixes:
	- Fix double free in find operation.

Version 0.1.9:
	New features:
	- Follow libt3key 0.2.0 API change.

Version 0.1.8:
	Bug fixes:
	- Show the menu bar when in hidden mode and a menu is activated.
	- Added check for required XCB constants, to prevent build failures.

Version 0.1.7:
	New features:
	- Allow finalizing of the library, to allow release of all memory for
	  debugging purposes.