@@ -78,10 +78,13 @@ class T3_WIDGET_API edit_window_t : public widget_t, public center_component_t, 
 			cleanup_ptr<autocomplete_panel_t>::t autocomplete_panel; /**< Panel for showing autocomplete options. */
 			bool autocomplete_panel_shown; /**< Boolean indicating whether the autocompletions are currently being shown. */
 
+			int repaint_min, /**< First line to repaint. */
+			    repaint_max; /**< Last line to repaint. */
+
 			implementation_t(void) : tab_spaces(false), find_dialog(NULL), finder(NULL),
 				wrap_type(wrap_type_t::NONE), wrap_info(NULL), ins_mode(0), last_set_pos(0),
 				auto_indent(true), indent_aware_home(true), show_tabs(false), autocompleter(NULL),
-				autocomplete_panel(NULL), autocomplete_panel_shown(false)
+				autocomplete_panel(NULL), autocomplete_panel_shown(false), repaint_min(0), repaint_max(INT_MAX)
 			{}
 		};
 		pimpl_ptr<implementation_t>::t impl;
@@ -156,6 +159,11 @@ class T3_WIDGET_API edit_window_t : public widget_t, public center_component_t, 
 		text_coordinate_t xy_to_text_coordinate(int x, int y);
 		/** Ensure that the cursor is visible. */
 		void ensure_cursor_on_screen(void);
+		/** Change the lines to start and end repainting.
+
+		    It is acceptable to pass @p start and @p end in reverse order.
+		*/
+		void update_repaint_lines(int start, int end);
 	public:
 		class T3_WIDGET_API view_parameters_t;
 
